--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,39 @@
+@font-face {
+  font-family: "fontGraphikBold";
+  src: url("../plugin/fonts/graphik/GraphikBold.otf");
+}
+
+@font-face {
+  font-family: "fontLatoRegular";
+  src: url("../plugin/fonts/lato/Lato-Regular.ttf");
+}
+
+@font-face {
+  font-family: "fontLatoBlack";
+  src: url("../plugin/fonts/lato/Lato-Black.ttf");
+}
+
+@font-face {
+  font-family: "fontGraphikSemibold";
+  src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
+}
+
+.fontGraphikBold {
+  font-family: "fontGraphikBold";
+}
+
+.fontGraphikSemibold {
+  font-family: "fontGraphikSemibold";
+}
+
+.fontLatoRegular {
+  font-family: "fontLatoRegular";
+}
+
+.fontLatoBlack {
+  font-family: "fontLatoBlack";
+}
+
 html {
   height: 100%;
   width: 100%;
@@ -36,12 +72,16 @@ body {
 
 .banner_button {
   padding: 18px 30px;
-  background-color: #334AC0;
+  background-color: #334ac0;
   font-size: 1rem;
   color: white;
   border: none;
   font-weight: 700;
   border-radius: 5px;
+}
+
+.banner_button:focus {
+  outline: none;
 }
 
 .banner__button_div {
@@ -50,7 +90,7 @@ body {
 
 .other_brand {
   height: 20vh;
-  background-color: #F8F9FD;
+  background-color: rgba(51, 74, 192, 0.03);
 }
 
 .who_you_are {
@@ -111,7 +151,6 @@ body {
 }
 
 .why_us {
-  background-color: #F9F9FD;
   padding-bottom: 6%;
 }
 
@@ -125,8 +164,17 @@ body {
   font-size: 1.4rem;
 }
 
+.why_us .container_bg_section1 {
+  background-color: rgba(51, 74, 192, 0.03);
+}
+
+.why_us .container_bg_section2 {
+  background-color: #ffffff;
+}
+
 .why_us .row {
   padding-top: 6%;
+  padding-bottom: 6%;
 }
 
 .why_us .row .text_para {
