--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,11 @@
 }
 
 @font-face {
+  font-family: "fontGraphikLight";
+  src: url("../plugin/fonts/graphik/GraphikLight.otf");
+}
+
+@font-face {
   font-family: "fontLatoRegular";
   src: url("../plugin/fonts/lato/Lato-Regular.ttf");
 }
@@ -16,6 +21,10 @@
 @font-face {
   font-family: "fontGraphikSemibold";
   src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
+}
+
+.fontGraphikLight {
+  font-family: "fontGraphikLight";
 }
 
 .fontGraphikBold {
@@ -290,5 +299,115 @@ body {
 
 .our_secrets .card__body_div h5 {
   font-weight: 700;
+}
+
+.crayond_ceo {
+  background-color: rgba(192, 152, 51, 0.05);
+  padding: 6% 0;
+}
+
+.crayond_ceo .about-crayond {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.crayond_ceo .about-crayond .row {
+  margin: auto;
+}
+
+.crayond_ceo .about-crayond .row span {
+  color: #c7ac1f;
+}
+
+.crayond_ceo .about-crayond .row .details_of_crayond {
+  font-size: 2rem;
+  font-weight: 300;
+}
+
+.crayond_ceo .about-crayond .row .details_of_crayond .text_bold {
+  color: #2b2a35;
+}
+
+.crayond_ceo .about-crayond .row .name_of_writer {
+  width: 100%;
+}
+
+.crayond_ceo .about-crayond .row img {
+  width: 65px;
+}
+
+.crayond_ceo .images_ceo {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.crayond_ceo .images_ceo img {
+  margin: 0 0 0 auto;
+  width: 400px;
+  height: auto;
+}
+
+.next_billion {
+  background-color: #334ac0;
+  padding-bottom: 6%;
+  padding-top: 6%;
+  text-align: center;
+}
+
+.next_billion .titel_button {
+  padding-bottom: 30px;
+}
+
+.next_billion .titel_button .button {
+  padding: 15px 30px;
+  background-color: rgba(0, 0, 0, 0.08);
+  font-size: 1rem;
+  color: #ffffff;
+  border: none;
+  border-radius: 5px;
+}
+
+.next_billion .titel_button .button:focus {
+  outline: none;
+}
+
+.next_billion h1 {
+  color: #ffffff;
+}
+
+.next_billion .button_div {
+  padding-top: 30px;
+}
+
+.next_billion .button_div .banner_button {
+  cursor: pointer;
+  padding: 18px 30px;
+  background-color: #ffffff;
+  font-size: 1rem;
+  color: #334ac0;
+  border: none;
+  font-weight: 700;
+  border-radius: 5px;
+}
+
+.next_billion .button_div .banner_button:focus {
+  outline: none;
+}
+
+.footer {
+  padding-bottom: 6%;
+  padding-top: 6%;
+}
+
+.footer ul {
+  padding: 0;
+}
+
+.footer ul li {
+  color: #43434b;
+  list-style-type: none;
+  padding-bottom: 10px;
 }
 /*# sourceMappingURL=styles.css.map */
