--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,6 +19,11 @@
 }
 
 @font-face {
+  font-family: "fontLatoBold";
+  src: url("../plugin/fonts/lato/Lato-Bold.ttf");
+}
+
+@font-face {
   font-family: "fontGraphikSemibold";
   src: url("../plugin/fonts/graphik/GraphikSemibold.otf");
 }
@@ -33,6 +38,10 @@
 
 .fontGraphikSemibold {
   font-family: "fontGraphikSemibold";
+}
+
+.fontLatoBold {
+  font-family: "fontLatoBold";
 }
 
 .fontLatoRegular {
@@ -401,13 +410,79 @@ body {
   padding-top: 6%;
 }
 
+.footer .logo_address img {
+  margin-bottom: 25px;
+}
+
+.footer .logo_address p {
+  color: #43434b;
+  margin-bottom: 8px;
+}
+
+.footer .footer_menu {
+  margin-bottom: 25px;
+}
+
 .footer ul {
   padding: 0;
 }
 
 .footer ul li {
-  color: #43434b;
-  list-style-type: none;
   padding-bottom: 10px;
+  list-style-type: none;
+}
+
+.footer ul li span {
+  color: #43434b;
+  cursor: pointer;
+}
+
+.footer ul li span:hover {
+  text-decoration: underline;
+  color: #334ac0;
+}
+
+.footer_social_media {
+  border-top: 1px solid rgba(25, 34, 79, 0.08);
+}
+
+.footer_social_media .footer_list {
+  padding: 15px 80px 15px 0px;
+  margin: 0;
+}
+
+.footer_social_media .footer_list span {
+  font-size: 1rem;
+  color: #43434b;
+  cursor: pointer;
+}
+
+.footer_social_media .footer_list span:hover {
+  color: #334ac0;
+}
+
+.footer_social_media .social_icon {
+  width: 39px;
+  height: 37px;
+  background-color: #ffffff;
+  margin: 10px 10px 10px 0px;
+  border-radius: 5px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  cursor: pointer;
+  border-radius: 12px;
+  -webkit-box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+          box-shadow: 0 3px 1px 0 rgba(55, 89, 93, 0.07);
+  border: solid 1px #d4e4e6;
+}
+
+.footer_social_media .social_icon:hover {
+  background-color: rgba(29, 46, 137, 0.05);
+}
+
+.footer_social_media .social_icon i {
+  margin: auto;
+  color: #334ac0;
 }
 /*# sourceMappingURL=styles.css.map */
