--- a/styles/styles.css
+++ b/styles/styles.css
@@ -243,13 +243,20 @@ body {
 
 .other_brand .brands {
   height: 20vh;
+}
+
+.other_brand .brands marquee {
+  height: 20vh;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
 
-.other_brand .brands img {
-  margin: auto;
+.other_brand .brands marquee .brands_logos {
+  margin: 0px 40px;
 }
 
 .who_you_are {
