--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -66,6 +66,9 @@ $darck-background-color: rgba(192, 152, 51, 0.05);
         margin-bottom: 6px;
     }
  }
+ .fixed {
+background-color: red !important;
+ }
 .header {
     overflow: hidden;
     background-color: #ffffff;
