--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -206,7 +206,7 @@ body{
         height: 20vh;
         display: flex;
         marquee{
-            height: 20vh;
+            // height: 20vh;
             align-items: center;
             display: flex;
             img{
