--- a/styles/styles.css
+++ b/styles/styles.css
@@ -868,6 +868,9 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden !important;
+  }
   .header {
     position: -webkit-sticky;
     position: sticky;
@@ -880,7 +883,7 @@ body {
     display: none !important;
   }
   .first_section {
-    height: calc(100vh - 85px);
+    height: 100% !important;
   }
   .video_player {
     display: none;
